# Dati-Client

./: CMakeLists.txt  README.md
command/: parser.c  parser.h
core/: main.c
include/: buffer.h  client.h  command.h  container.h  decimal.h  list.h  node.h  protocol.h  query.h  script.h  shell.h  utils.h  value.h  variable.h
network/: buffer.c  buffer.h  client.c  client.h  protocol.c  protocol.h  query.c  query.h
scripts/: insert.dati
src/command/: command.c
src/core/: main.c
src/list/: list.c
src/network/: buffer.c  client.c  protocol.c  query.c
src/script/: script.c
src/shell/: shell.c
src/utils/: utils.c
utils/: buffer.c  buffer.h  decimal.c  utils.c  utils.h
